--- a/package.json
+++ b/package.json
@@ -5,24 +5,25 @@
   "author": "Mark Finger <markfinger@gmail.com",
   "license": "MIT",
   "main": "lib/index.js",
-  "homepage": "https://github.com/markfinger/react-render",
+  "homepage": "https://github.com/BuildScience/react-render",
   "bugs": {
-    "url": "https://github.com/markfinger/react-render/issues"
+    "url": "https://github.com/BuildScience/react-render/issues"
   },
   "repository": {
     "type": "git",
-    "url": "https://github.com/markfinger/react-render.git"
+    "url": "https://github.com/BuildScience/react-render.git"
   },
   "dependencies": {
     "lodash": "^3.10.0"
   },
   "peerDependencies": {
-    "react": ">= 0.12"
+    "react": ">= 0.14.0-beta1",
+    "react-dom": ">= 0.14.0-beta1"
   },
   "devDependencies": {
     "chai": "^3.0.0",
     "mocha": "^2.2.5",
-    "react": "^0.13.3"
+    "react": "^0.14.0-beta1"
   },
   "scripts": {
     "test": "mocha"
